# pyconsql

./: .gitignore  Makefile  README.md  alembic.ini  pyproject.toml  tasks.py
alembic/: env.py
alembic/versions/: 0000_add_pet_data.py  20200809155758_add_pets.py
openapi/: openapi.yml
pyconsql/: connexion_utils.py  database.py  main.py  wsgi.py
pyconsql/api/: models_autogenerated.py
pyconsql/api/controller/: health.py  pets.py
pyconsql/api/model/: models_autogenerated.py  pet.py  spec_models.py
pyconsql/api/settings/: common.py  local.py  production.py  stage.py
tests/: test_python_connexion_sqlalchemy.py
